idea/testData/checkerWithErrorTypes/quick/QualifiedExpressions.jet
namespace qualified_expressions

fun test(s: String?) {
   val a: Int = <!TYPE_MISMATCH!>s?.length<!>
   val b: Int? = s?.length
   val c: Int = s?.length ?: -11
   val d: Int = s?.length ?: <!TYPE_MISMATCH!>"empty"<!>
   val e: String = <!TYPE_MISMATCH!>s?.length<!> ?: "empty"
   val f: Int = s?.length ?: b ?: 1
   val g: Int? = e? startsWith("s")?.length
}